# StoneGate

./: .gitignore  README.md  stonegate_api.hpp  stonegate_qec.hpp  stonegate_qec.py
backend/: CMakeLists.txt  package-lock.json  package.json  qec_stub.py  server.js
backend-sim/: Instructions.md  package-lock.json  package.json  server.js
backend/include/: CMakeLists.cmake  DescriptorProtocol.hpp  Device.hpp  DeviceRegistry.hpp  WebSocketServer.hpp
backend/src/: Backend.cpp  DescriptorProtocol.cpp  DeviceRegistry.cpp  WebSocketServer.cpp  main.cpp  test_simulator.cpp
backend/tests/: CMakeLists.txt  devices_citest.cpp  phys_engine_citest.cpp  phys_engine_tests.cpp  simulator_citest.cpp
docs/: DEVELOPER.md  Error_Messages.md  Software_Specifications.md  Tooling.md  Troubleshooting.md  installation-wizard.md  installer.md
frontend/: .env  .gitignore  diff_now.diff  index.html  macros.json  package-lock.json  package.json  pnpm-lock.yaml  styles.css  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/public/: index.html  stonegate-config.js
frontend/scripts/: stonegate-admin-lib.mjs  stonegate-admin.mjs  sync-docs.mjs  sync-live-transform-demo.mjs
frontend/src/: App.tsx  index.css  index.tsx  (+1 more)
scripts/: README.md  _lib.sh  makeall  makeclean  makedocs  makeplugins  makevenv  run_sim_stack  setup_and_launch  status_sim_backend  stop_sim_backend
sdk/cpp/: CMakeLists.txt
sdk/cpp/include/: stonegate_api.hpp  stonegate_qec.hpp
sdk/cpp/src/: stonegate_api.cpp
tools/: CMakeLists.txt  README.md  generate_error_messages.mjs  generate_stonegate_sdk.py  integration_tests.ipynb  leak_check.ipynb  leak_check.py  macro_wizard_test.ipynb  macro_wizard_test_export.ipynb  qec_client.cpp  run_qec_integration.sh  supervisord.conf  toolbox_ws_client.cpp
tools/diagnostics/: backend-log-smoke.mjs
tools/install-wizard/: build.mjs
tools/installer/: README.md  stonegate-bundle.sh
tools/installer/templates/: install.sh  serve-frontend.mjs  stonegate-backend.service  stonegate-full.service  stonegate-run.sh  stonegate-ui.service  stonegate-wizard.sh
tools/installer/templates/docker/: .env.example  Dockerfile.backend  Dockerfile.ui  README.md  docker-compose.backend.yml  docker-compose.full.yml
tools/live-transform-demo/: README.md  index.html  main.mjs  plugin-template.mjs
tools/live-transform-demo/cpp/: CMakeLists.txt  README.md  qec_health_server.cpp
tools/live-transform-demo/plugins/: bloch-python.mjs  bloch-sdk-python.mjs  example-plugin.mjs  manifest.json  qec-health-cpp.mjs
tools/live-transform-demo/python/: bloch_server.py  bloch_server_stonegate_sdk.py  requirements.txt
tools/sdk_sources/: stonegate_api.py  stonegate_qec.hpp  stonegate_qec.py
tools/toolbox_python/: README.md  pyproject.toml  stonegate_toolbox_client.py
(+107 files in other folders)
